Add project name and version to manifest file

--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -7,15 +7,15 @@
  * This project uses @Incubating APIs which are subject to change.
  */
 
-group = 'io.github.jmdaemon.toolbox'
-version = '0.1.0'
-
 plugins {
     // Apply the java-library plugin for API and implementation separation.
     id 'java-library'
     // Publish new library release to the maven repositories
     id 'maven-publish'
 }
+
+group = 'io.github.jmdaemon.toolbox'
+version = '0.1.0'
 
 repositories {
     // Use Maven Central for resolving dependencies.
@@ -56,4 +56,10 @@ publishing {
     }
 }
 
-
+// Add the project name and version to the manifest file
+jar {
+    manifest {
+        attributes('Implementation-Title': rootProject.name,
+                   'Implementation-Version': project.version)
+    }
+}
