Fix typo in group name for library

--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -14,7 +14,7 @@ plugins {
     id 'maven-publish'
 }
 
-group = 'io.github.jmdaemon.toolbox'
+group = 'io.github.jmdaemon'
 version = '0.1.0'
 
 repositories {
